fix overflow

--- a/home.css
+++ b/home.css
@@ -10,6 +10,11 @@ body {
     margin: 1vmin;
   }
 
+  html, body {
+      max-width: 100%;
+      overflow-x: hidden;
+  }
+
 #header {
     position: fixed;
     top:0
